UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/FTRWSCVDRate__c.object-meta.xml
<CustomObject>
    <label>FTRWSCVDRate</label>
    <nameField>
        <displayFormat>CRR-{000000}</displayFormat>
        <label>CVD Rate Req #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTRWSCVDRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>