UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/ACNA__c.field-meta.xml
<CustomField>
    <fullName>ACNA__c</fullName>
    <label>ACNA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>