UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/AirlineMileageRate__c.field-meta.xml
<CustomField>
    <fullName>AirlineMileageRate__c</fullName>
    <label>AirlineMileageRate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>