UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/AirlineMileageUsoc__c.field-meta.xml
<CustomField>
    <fullName>AirlineMileageUsoc__c</fullName>
    <label>AirlineMileageUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>