UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/CircuitType__c.field-meta.xml
<CustomField>
    <fullName>CircuitType__c</fullName>
    <label>CircuitType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>