UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/CVD_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>CVD_Progress_Status__c</fullName>
    <label>CVD Progress Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>