UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/cvdLookupUsed__c.field-meta.xml
<CustomField>
    <fullName>cvdLookupUsed__c</fullName>
    <label>cvdLookupUsed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>