UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/cvdPriceTier__c.field-meta.xml
<CustomField>
    <fullName>cvdPriceTier__c</fullName>
    <label>cvdPriceTier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>