UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/EvcSpeed__c.field-meta.xml
<CustomField>
    <fullName>EvcSpeed__c</fullName>
    <label>EvcSpeed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>