UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/FixedMileageUsoc__c.field-meta.xml
<CustomField>
    <fullName>FixedMileageUsoc__c</fullName>
    <label>FixedMileageUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>