UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/FTRWSAddress__c.field-meta.xml
<CustomField>
    <fullName>FTRWSAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FTRWSAddress</label>
    <referenceTo>FTRWSAddress__c</referenceTo>
    <relationshipLabel>FTRWSCVDRates</relationshipLabel>
    <relationshipName>FTRWSCVDRates</relationshipName>
    <type>Lookup</type>
</CustomField>