UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/InternetPortRate__c.field-meta.xml
<CustomField>
    <fullName>InternetPortRate__c</fullName>
    <label>InternetPortRate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>