UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/InternetPortUsoc__c.field-meta.xml
<CustomField>
    <fullName>InternetPortUsoc__c</fullName>
    <label>InternetPortUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>