UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Level_of_service__c.field-meta.xml
<CustomField>
    <fullName>Level_of_service__c</fullName>
    <label>Level of service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>