UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/LocTier__c.field-meta.xml
<CustomField>
    <fullName>LocTier__c</fullName>
    <label>LocTier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>