UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/MileageThresholdRate__c.field-meta.xml
<CustomField>
    <fullName>MileageThresholdRate__c</fullName>
    <label>MileageThresholdRate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>