UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/MileageThresholdUsoc__c.field-meta.xml
<CustomField>
    <fullName>MileageThresholdUsoc__c</fullName>
    <label>MileageThresholdUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>