UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Mrc__c.field-meta.xml
<CustomField>
    <fullName>Mrc__c</fullName>
    <label>Mrc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>