UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/MrcUsoc__c.field-meta.xml
<CustomField>
    <fullName>MrcUsoc__c</fullName>
    <label>MrcUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>