UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Nrc__c.field-meta.xml
<CustomField>
    <fullName>Nrc__c</fullName>
    <label>Nrc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>