UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/NrcUsoc__c.field-meta.xml
<CustomField>
    <fullName>NrcUsoc__c</fullName>
    <label>NrcUsoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>