UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>FTRWSCVDRates</relationshipLabel>
    <relationshipName>FTRWSCVDRates</relationshipName>
    <type>Lookup</type>
</CustomField>