UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/PNum__c.field-meta.xml
<CustomField>
    <fullName>PNum__c</fullName>
    <label>PNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>