UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>