UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/QuotelineItem_Id__c.field-meta.xml
<CustomField>
    <fullName>QuotelineItem_Id__c</fullName>
    <label>QuotelineItem Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>