UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/ServiceTierPort__c.field-meta.xml
<CustomField>
    <fullName>ServiceTierPort__c</fullName>
    <label>ServiceTierPort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>