UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Spec__c.field-meta.xml
<CustomField>
    <fullName>Spec__c</fullName>
    <label>Spec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>