UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Term_Aggrement__c.field-meta.xml
<CustomField>
    <fullName>Term_Aggrement__c</fullName>
    <label>Term Aggrement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>