UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/UniSpeed__c.field-meta.xml
<CustomField>
    <fullName>UniSpeed__c</fullName>
    <label>UniSpeed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>