UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/usocTier__c.field-meta.xml
<CustomField>
    <fullName>usocTier__c</fullName>
    <label>usocTier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>