UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/UsocType__c.field-meta.xml
<CustomField>
    <fullName>UsocType__c</fullName>
    <label>UsocType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>