UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/Vta__c.field-meta.xml
<CustomField>
    <fullName>Vta__c</fullName>
    <label>Vta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>