UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCVDRate__c/fields/WS_Acna__c.field-meta.xml
<CustomField>
    <fullName>WS_Acna__c</fullName>
    <formula>IF(LOWER(ACNA__c) =   LOWER(Opportunity__r.Wholesale_ACNA__r.Name) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WS Acna</label>
    <type>Checkbox</type>
</CustomField>